<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_new_chatroom"
        android:id="@+id/tvRoomContent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilCreateChat"
        android:layout_below="@+id/tvRoomContent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etCreateChat"
            android:hint="@string/text_room_content"
            android:inputType="text"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilCreateChat"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelCreateChatroom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#5d7b8e"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCreateChatroom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#5d7b8e"
            android:text="@string/btn_create"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>