<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_room_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/tvNotification"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNotification"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelCreateChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#5d7b8e"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCreateChatDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#5d7b8e"
            android:text="@string/btn_create"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>