<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEditUsername">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEditUsername"
            android:hint="@string/hint_edit_username"
            android:inputType="text"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEditUsername"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#5d7b8e"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnEditUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#5d7b8e"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>