<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:background="@drawable/login_radial"
    android:id="@+id/view"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_vertical"
        android:background="#ffffff"
        android:id="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/edit_text_default_margin"
            android:layout_marginStart="@dimen/edit_text_default_margin"
            android:layout_marginRight="@dimen/edit_text_default_margin"
            android:layout_marginEnd="@dimen/edit_text_default_margin"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:hint="@string/email_login"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/edit_text_default_margin"
            android:layout_marginStart="@dimen/edit_text_default_margin"
            android:layout_marginRight="@dimen/edit_text_default_margin"
            android:layout_marginEnd="@dimen/edit_text_default_margin"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password_login"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_login"
            android:layout_marginLeft="@dimen/edit_text_default_margin"
            android:layout_marginStart="@dimen/edit_text_default_margin"
            android:layout_marginRight="@dimen/edit_text_default_margin"
            android:layout_marginEnd="@dimen/edit_text_default_margin"
            android:background="@drawable/btn_ls_actions"
            android:textColor="@color/coolGrayColor"
            android:layout_marginTop="15dp"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_facebook_login"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:padding="15dp"
        android:id="@+id/btnFacebookLogin"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawableStart="@drawable/ic_facebook"
        android:layout_below="@+id/linearLayout"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_below="@+id/btnFacebookLogin"
        android:layout_centerHorizontal="true"
        android:weightSum="2.0"
        android:id="@+id/llBtns">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textColor="#FFFFFF"
            android:text="@string/btn_browse_mode"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:background="@drawable/btn_transparent_unpressed"
            android:id="@+id/btnBrowseMode" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textColor="#FFFFFF"
            android:text="@string/btn_sign_up"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:background="@drawable/btn_transparent_unpressed"
            android:id="@+id/btnSignUp" />
    </LinearLayout>

    <WebView
        android:id="@+id/wvFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</RelativeLayout>
