<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_feed"
    tools:context="zomeapp.com.zomechat.activities.AddFeedActivity">

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hashtag_tv"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"/>

    <EditText
        android:id="@+id/etMessage"
        android:gravity="top"
        android:layout_below="@+id/tvHint"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:imeOptions="actionDone"
        android:maxLines="7"/>

    <ImageView
        android:id="@+id/ivAddImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/etMessage"
        android:layout_above="@+id/llBtns"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageButton
        android:id="@+id/btnAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMessage"
        android:src="@drawable/ic_select_photo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/btn_cancel"
            android:background="#5d7b8e"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnPost"
            android:text="@string/btn_post"
            android:background="#5d7b8e"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
